--- a/src/assets/css/v2/_variable.scss
+++ b/src/assets/css/v2/_variable.scss
@@ -8,6 +8,7 @@ $white: #ffffff;
 $text-body-color: #37394D;
 $text-menu-color: #404040;
 $label-color: #737373;
+$column-header-color:rgba(0, 0, 0, 0.7);
 $placeholder-color: #ABB4BD;
 $focus-border-color: #2A2A86;
 $border-color: #DFDFDF;
@@ -16,24 +17,23 @@ $border-radius: 3px;
 $font-size: 14px;
 $font-size-medium: 18px;
 $font-size-large: 20px;
-
 $mobile-width: 991px;
 $tablet-width: 992px;
 $desktop-width: 1400px;
-
 @mixin mobile {
-  @media (max-width: #{$mobile-width}) {
-    @content;
-  }
+    @media (max-width: #{$mobile-width}) {
+        @content;
+    }
 }
 
-@mixin tablet { @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-  @content;
-}
+@mixin tablet {
+    @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+        @content;
+    }
 }
 
 @mixin desktop {
-  @media (min-width: #{$desktop-width}) {
-    @content;
-  }
+    @media (min-width: #{$desktop-width}) {
+        @content;
+    }
 }
