--- a/src/assets/css/v2/_sale-order.scss
+++ b/src/assets/css/v2/_sale-order.scss
@@ -649,3 +649,11 @@ input {
     }
 
 }
+
+.yody-table-discount{
+    .ant-select{
+        .ant-select-selector{
+            min-height: 37px;
+        }
+    }
+}
