--- a/src/assets/css/v2/_variable.scss
+++ b/src/assets/css/v2/_variable.scss
@@ -1,4 +1,5 @@
 $primary-color: #2A2A86;
+$menu-color:rgba(0, 0, 0, 1);
 $secondary-color: #FCAF17;
 $background-color: #F3F3F7;
 $background-color-secondary: #F4F4F7;
