--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -194,6 +194,8 @@ label {
 @import "editor";
 @import "product";
 @import "modal-confirm";
+@import "sale-order";
+
 .display {
     &-block {
         display: block;
