--- a/src/assets/css/v2/app.scss
+++ b/src/assets/css/v2/app.scss
@@ -228,6 +228,10 @@ label {
                 align-items: center;
                 flex-flow: column wrap;
             }
+            .ant-image-img {
+                max-height: 470px;
+                object-fit: contain;
+            }
         }
     }
     &-right {
@@ -283,6 +287,11 @@ label {
                 margin-right: 70px;
                 margin-bottom: 20px;
                 &-delete {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: none;
+                    background-color: transparent;
                     position: absolute;
                     top: -9px;
                     right: -9px;
@@ -309,6 +318,16 @@ label {
                 &:nth-child(3n) {
                     margin-right: 0;
                 }
+                .upload-progress {
+                    position: absolute;
+                    top: 0;
+                    height: 120px;
+                    background: rgba(0,0,0,.5);
+                    width: 120px;
+                    justify-content: center;
+                    align-items: center;
+                    display: flex;
+                }
                 .ant-image {
                     display: flex;
                     width: 100%;
@@ -319,6 +338,9 @@ label {
                     .ant-image-mask,
                     .ant-image-img {
                         border-radius: 5px;
+                        width: 120px;
+                        height: 120px;
+                        object-fit: contain;
                     }
                     &-error {
                         border: 2px dashed #cfdce9;
