--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -1,4 +1,5 @@
 $primary-color: #2A2A86;
+$sider-color: #222247;
 $menu-color:rgba(0, 0, 0, 1);
 $secondary-color: #FCAF17;
 $background-color: #F3F3F7;
@@ -21,6 +22,7 @@ $font-size-large: 20px;
 $mobile-width: 991px;
 $tablet-width: 992px;
 $desktop-width: 1400px;
+$black: #000000;
 @mixin mobile {
     @media (max-width: #{$mobile-width}) {
         @content;
