--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;600;700&display=swap');
 @import "variable";
 @import "overwrite";
 #root {
     width: 100%;
     height: 100%;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 * {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .ant-layout-sider-collapsed {
@@ -93,15 +93,10 @@
 }
 
 .container {
-    margin-left: 255px;
-    padding: 18px 20px;
-    padding-top: 90px;
-    transition: all 0.2s;
+    margin-left: 240px;
+    transition: all 0.1s;
     &.collapsed {
-        margin-left: 65px;
-        .page-header {
-            left: 65px;
-        }
+        margin-left: 55px;
     }
 }
 
