--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -50,7 +50,7 @@
       }
     }
     .text {
-      font-family: Inter;
+      font-family: Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
@@ -141,14 +141,25 @@
 
 .title-address {
   font-weight: 500;
+  font-size: 14px;
+  color: #000000;
+  margin-bottom: 5px;
 }
 
 .customer-row-info {
-  padding: 6px 0 6px;
+  color: #5f5f5f;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 2px 0;
 }
 
 .btn-style {
-  color: #2a2a86;
+  color: #5d5d8a;
+  padding: 0;
+  margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  margin-top: 5px;
 }
 
 .cdn-level {
@@ -263,7 +274,9 @@
 
 .orders-tag-vip {
   background-color: rgba(93, 95, 239, 0.1);
-  color: #5d5fef;
+  color: #2a2a86;
+  margin: 0px;
+  font-weight: 500;
 }
 
 .ant-divider-horizontal {
@@ -633,10 +646,22 @@ input {
 }
 
 .title-card {
-  margin-top: 40px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    position: relative;
+    padding-left: 25px;
+}
+.title-card::before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background: #fcaf17;
+  border-radius: 50%;
+  top: 4px;
+  position: absolute;
+  left: 3px;
 }
 
 .ant-form-item-label label {
@@ -648,12 +673,34 @@ input {
 }
 
 .title-header {
-  padding: 16px 0 16px 30px;
+  padding: 16px 0 0 30px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.padding-left-right-30{
+.padding-left-right-30 {
   padding: 0 30px;
+}
+
+.logo-customer {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-left: 5px;
+  margin-top: 3px;
+}
+
+.text-body {
+  color: #222222;
+  font-size: 14px;
+}
+
+.icon-customer-info {
+  width: 16px;
+  height: 16px;
+}
+
+.padding-24{
+  padding: 24px;
 }
