--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -855,6 +855,7 @@ input {
     margin-right: 8px;
     width: 18px;
     height: 18px;
+    filter: invert(15%) sepia(39%) saturate(4137%) hue-rotate(231deg) brightness(96%) contrast(100%)
   }
     span{
     height: 18px;
