--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -245,7 +245,7 @@
           color: #2a2a86;
           font-family: Roboto;
         }
-        .ant-steps-item-icon> .ant-steps-icon .ant-steps-icon-dot{
+        .ant-steps-item-icon > .ant-steps-icon .ant-steps-icon-dot {
           background-color: #2a2a86 !important;
         }
       }
@@ -355,7 +355,7 @@
         height: 14px;
         top: 16px;
         left: -8px;
-        background-color: #E5E5E5;
+        background-color: #e5e5e5;
         border-radius: 50%;
       }
       &::before {
@@ -833,17 +833,17 @@ input {
   color: "#222222";
   border: "1px solid #E5E5E5";
 }
-.saleorder_shipment_method_btn{
+.saleorder_shipment_method_btn {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 60px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #2A2A86;
+  border-bottom: 1px solid #2a2a86;
 }
-.saleorder_shipment_button_active{
-  border: 1px solid #2A2A86;
+.saleorder_shipment_button_active {
+  border: 1px solid #2a2a86;
   border-bottom: none;
   height: 55px;
   padding: 10px;
@@ -851,36 +851,36 @@ input {
   background-color: white;
   margin-top: 6px;
   flex: 1;
-    img{
+  img {
     margin-right: 8px;
     width: 18px;
     height: 18px;
-    filter: invert(15%) sepia(39%) saturate(4137%) hue-rotate(231deg) brightness(96%) contrast(100%)
+    filter: invert(15%) sepia(39%) saturate(4137%) hue-rotate(231deg)
+      brightness(96%) contrast(100%);
   }
-    span{
+  span {
     height: 18px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 1px;
     letter-spacing: 0.2px;
-    color: #2A2A86;
+    color: #2a2a86;
   }
- 
 }
 
-.saleorder_shipment_button{
-  border: 1px solid #E5E5E5;
+.saleorder_shipment_button {
+  border: 1px solid #e5e5e5;
   padding: 10px;
   border-radius: 3px;
   cursor: pointer;
   flex: 1;
-  img{
+  img {
     margin-right: 8px;
     width: 18px;
     height: 18px;
   }
-  span{
+  span {
     height: 18px;
     font-style: normal;
     font-weight: normal;
@@ -891,40 +891,38 @@ input {
   }
 }
 
-.saleorder_shipment_button_border{
-  border: 1px solid #2A2A86;
-  span{
-    color: #2A2A86
+.saleorder_shipment_button_border {
+  border: 1px solid #2a2a86;
+  span {
+    color: #2a2a86;
   }
 }
 // shipment đơn hàng
 
-.saleorder_shipment_order_colapse{
-  &>div{
-    &>div{
-      &:first-child{
-          &>div{
-            width: 220px;
-            display: flex;
-            align-items: center;
-            &>div{
-              &>p{
-                margin: 0;
-                font-family: Inter;
-                font-style: normal;
-                font-weight: 500;
-                font-size: 18px;
-                line-height: 22px;
+.saleorder_shipment_order_colapse {
+  & > div {
+    & > div {
+      &:first-child {
+        & > div {
+          width: 220px;
+          display: flex;
+          align-items: center;
+          & > div {
+            & > p {
+              margin: 0;
+              font-family: Inter;
+              font-style: normal;
+              font-weight: 500;
+              font-size: 18px;
+              line-height: 22px;
             }
-
           }
-        
+        }
       }
     }
   }
-}}
+}
 
-
-.margin-top-bottom-10{
+.margin-top-bottom-10 {
   margin: 10px 0;
 }
