--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -11,6 +11,7 @@
         display: flex;
         font-weight: 400;
         padding: 9px 14px;
+        border-bottom: 1px solid #F5F5F5;
         span {
             margin-left: 13px;
         }
@@ -25,7 +26,7 @@
 
 .supplier {
   padding: 0;
-  .ant-select-item {
+  .ant-select-item, .ant-select-item:focus{
     padding: 0px;
     height: auto;
     .supplier-item {
@@ -34,7 +35,8 @@
       align-items: center;
       padding: 6px 12px;
       background: #FFFFFF;
-      box-shadow: 0px 1px 0px #F5F5F5;
+      border-bottom: 1px solid #F5F5F5;
+
       &-title {
         margin-left: 10px;
         color: #222222;
@@ -101,6 +103,137 @@
         font-size: 14px;
         color:#737373;
       }
+    }
+  }
+}
+
+.product {
+  padding: 0;
+  .ant-select-item {
+    padding: 0px;
+    height: auto;
+    .product-item {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 6px 12px;
+      background: #FFFFFF;
+      border-bottom: 1px solid #F5F5F5;
+      &-image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 40px;
+        border-radius: 3px;
+        background-color: #f2f2f2;
+        img {
+          max-width: 30px;
+          max-height: 40px;
+          border-radius: 3px;
+        }
+      }
+      &-info {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        margin-left: 10px;
+        &-left {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+        &-right {
+          display: flex;
+          flex-direction: column;
+          text-align: right;
+          justify-content: center;
+        }
+      }
+      &-name {
+        font-size: 14px;
+        color: #222222;
+        line-height: 18px;
+      }
+      &-sku {
+        margin-top: 5px;
+        font-size: 12px;
+        line-height: 18px;
+        color: #737373;
+      }
+      &-price {
+        font-size: 14px;
+        color: #222222;
+        line-height: 18px;
+        .currency {
+          font-size: 12px;
+          line-height: 14px;
+          color: #737373;
+        }
+      } 
+      &-inventory {
+        font-size: 12px;
+        line-height: 18px;
+        .value {
+          color:  $primary-color;
+        }
+      }
+      &:hover {
+        background-color:  #F7F7FF;
+      }
+    }
+  }
+}
+
+.product-table {
+  .product-item-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 40px;
+    border-radius: 3px;
+    background-color: #f2f2f2;
+    img {
+      max-width: 30px;
+      max-height: 40px;
+      border-radius: 3px;
+    }
+  }
+  .product-item-sku {
+    font-size: 14px;
+    line-height: 18px;
+    color: $primary-color;
+  }
+  .product-item-name {
+    font-size: 12px;
+    line-height: 18px;
+    color:  #666666;
+    margin-top: 5px;
+    width: 100%;
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .product-item-discount {
+    &-select {
+      .ant-select-selector {
+        border-top-left-radius: 5px !important;
+        border-bottom-left-radius: 5px !important;
+        background-color: #F5F5F5;
+      }
+    }
+    &-input {
+      width: 65%;
+      text-align: right;
+    }
+  }
+  &-sumary {
+    .total {
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 18px;
     }
   }
 }
