--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -354,7 +354,7 @@
         height: 14px;
         top: 16px;
         left: -8px;
-        background-color: #e5e5e5;
+        background-color: #27ae60;
         border-radius: 50%;
       }
       &::before {
@@ -443,7 +443,7 @@
 .saleorder-input-group-wrapper {
   padding: 0;
   min-height: 37px;
-  &> div {
+  & > div {
     position: relative;
   }
   .ant-input-group {
@@ -458,7 +458,7 @@
     right: 1px;
     top: calc(100% + 2px);
   }
-  .ant-table-body{
+  .ant-table-body {
     overflow: hidden;
   }
   .currency-option {
@@ -737,14 +737,13 @@
 }
 .sale-product-box-table {
   padding: 0 24px;
-  .ant-table-body{
+  .ant-table-body {
     overflow-y: scroll;
     overflow-x: hidden;
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
       z-index: 1111;
       background-color: rgb(236, 234, 234);
     }
-
   }
 }
 
@@ -931,65 +930,74 @@
       }
     }
   }
+    .ant-collapse-header{
+    width: 100%;
+      .ant-row{
+      width: 100%;
+      display: flex;
+      justify-content:space-between;
+      .ant-col{
+        display: flex;
+        justify-content: space-between;
+        p{
+         line-height: 2
+        }
+      }
+    }
+  }
 }
 
 .margin-top-bottom-10 {
   margin: 10px 0;
 }
 
-.yody-pos-gift-modal{
- .ant-modal-content{
-  width: 650px;
-  .ant-modal-body{
-    div{
-      &:nth-child(1){
-        
-      }
-      &:nth-child(2){
-        width: 100%;
-        margin-bottom: 2px;
-      }
-      &:nth-child(3){
-        width: 100%;
-      }
-      .ant-select-item-option-content{
-        width: 1100px;
+.yody-pos-gift-modal {
+  .ant-modal-content {
+    width: 650px;
+    .ant-modal-body {
+      div {
+        &:nth-child(1) {
+        }
+        &:nth-child(2) {
+          width: 100%;
+          margin-bottom: 2px;
+        }
+        &:nth-child(3) {
+          width: 100%;
+        }
+        .ant-select-item-option-content {
+          width: 1100px;
+        }
       }
     }
   }
- }
 }
 
-.saleorder-modal-config{
-  button{
-    &:nth-child(1){
-      height: 38px;
-      border-radius: 3px;
-      
-    }
-    &:nth-child(2){
-      width: 98px; 
+.saleorder-modal-config {
+  button {
+    &:nth-child(1) {
       height: 38px;
       border-radius: 3px;
     }
-    &:nth-child(3){  
-
+    &:nth-child(2) {
+      width: 98px;
+      height: 38px;
+      border-radius: 3px;
     }
-}
- div{
-   &:nth-child(1){
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 16px;
-   }
- }
- .ant-modal-footer {
-  box-shadow: none;
-  border: none;
-  padding: 0 34px 26px 0;
-}
-.ant-modal-header{
-  padding: 26px 34px 0 24px ;
-}
+    &:nth-child(3) {
+    }
+  }
+  div {
+    &:nth-child(1) {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 16px;
+    }
+  }
+  .ant-modal-footer {
+    box-shadow: none;
+    border: none;
+    padding: 0 34px 26px 0;
+  }
 }
