--- a/src/assets/css/_page-header.scss
+++ b/src/assets/css/_page-header.scss
@@ -20,10 +20,10 @@
       .ant-breadcrumb{
         span{
           .ant-breadcrumb-link{
-            color: rgba(149, 161, 172, 0.9);
+            color: #5D5D8A
             
             a{
-              color: rgba(149, 161, 172, 0.9);
+              color: #5D5D8A
             }
 
             &:hover{
@@ -36,7 +36,7 @@
 
           &:last-child{
             .ant-breadcrumb-link, a{
-              color: $primary-color;
+              color: #222222;
             }
           }
         }
