add total price

--- a/src/assets/css/_page-header.scss
+++ b/src/assets/css/_page-header.scss
@@ -20,10 +20,9 @@
       .ant-breadcrumb{
         span{
           .ant-breadcrumb-link{
-            color: #5D5D8A
-            
-            a{
-              color: #5D5D8A
+            color: #5D5D8A;
+              a{
+              color: #5D5D8A;
             }
 
             &:hover{
