--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -112,76 +112,81 @@
   .ant-select-item {
     padding: 0px;
     height: auto;
-    .product-item {
+    
+  }
+  .ant-checkbox-wrapper {
+    margin-right: 10px;
+  }
+  .product-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 6px 12px;
+    background: #FFFFFF;
+    border-bottom: 1px solid #F5F5F5;
+    &-image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 40px;
+      border-radius: 3px;
+      background-color: #f2f2f2;
+      img {
+        max-width: 30px;
+        max-height: 40px;
+        border-radius: 3px;
+      }
+    }
+    &-info {
+      width: 100%;
       display: flex;
       flex-direction: row;
-      align-items: center;
-      padding: 6px 12px;
-      background: #FFFFFF;
-      border-bottom: 1px solid #F5F5F5;
-      &-image {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 30px;
-        height: 40px;
-        border-radius: 3px;
-        background-color: #f2f2f2;
-        img {
-          max-width: 30px;
-          max-height: 40px;
-          border-radius: 3px;
-        }
-      }
-      &-info {
+      margin-left: 10px;
+      &-left {
         width: 100%;
         display: flex;
-        flex-direction: row;
-        margin-left: 10px;
-        &-left {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-        }
-        &-right {
-          display: flex;
-          flex-direction: column;
-          text-align: right;
-          justify-content: center;
-        }
+        flex-direction: column;
+        justify-content: center;
       }
-      &-name {
-        font-size: 14px;
-        color: #222222;
-        line-height: 18px;
+      &-right {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+        justify-content: center;
+        width: 150px;
       }
-      &-sku {
-        margin-top: 5px;
+    }
+    &-name {
+      font-size: 14px;
+      color: #222222;
+      line-height: 18px;
+    }
+    &-sku {
+      margin-top: 5px;
+      font-size: 12px;
+      line-height: 18px;
+      color: #737373;
+    }
+    &-price {
+      font-size: 14px;
+      color: #222222;
+      line-height: 18px;
+      .currency {
         font-size: 12px;
-        line-height: 18px;
+        line-height: 14px;
         color: #737373;
       }
-      &-price {
-        font-size: 14px;
-        color: #222222;
-        line-height: 18px;
-        .currency {
-          font-size: 12px;
-          line-height: 14px;
-          color: #737373;
-        }
-      } 
-      &-inventory {
-        font-size: 12px;
-        line-height: 18px;
-        .value {
-          color:  $primary-color;
-        }
+    } 
+    &-inventory {
+      font-size: 12px;
+      line-height: 18px;
+      .value {
+        color:  $primary-color;
       }
-      &:hover {
-        background-color:  #F7F7FF;
-      }
+    }
+    &:hover {
+      background-color:  #F7F7FF;
     }
   }
 }
@@ -282,5 +287,10 @@
   margin-right: 30px;
   &-result {
     font-weight: 500;
+  }
+}
+.modal-product-list {
+  .custom-table-pagination {
+    padding: 20px 0px;
   }
 }
