--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -192,6 +192,17 @@
 }
 
 .product-table {
+  .ant-table-row:hover {
+    .product-item-note {
+      display: inline-block;
+    }
+  }
+  .product-item-note-input {
+    .ant-input-group-addon {
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+    }
+  }
   .product-item-image {
     display: flex;
     align-items: center;
@@ -236,6 +247,22 @@
 
     }
   }
+  .product-item-delete {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    color: #222222;
+    box-shadow: none;
+    &:hover {
+      background-color: rgba($primary-color, .15)
+    }
+  }
   .product-item-vat {
     .ant-input {
       text-align: right;
@@ -255,6 +282,9 @@
         justify-content: center;
       }
     }
+  }
+  .product-item-note {
+    display: none;
   }
   &-sumary {
     .total {
