--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -192,8 +192,10 @@
 }
 
 .product-table {
-  .ant-table-cell {
-    padding: 10px 5px !important;
+  .product-table-row {
+    .ant-table-cell {
+      padding: 10px 5px !important;
+    }
   }
   .ant-col-info:hover {
     .product-item-note {
