--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -930,17 +930,17 @@
       }
     }
   }
-    .ant-collapse-header{
+  .ant-collapse-header {
     width: 100%;
-      .ant-row{
+    .ant-row {
       width: 100%;
       display: flex;
-      justify-content:space-between;
-      .ant-col{
+      justify-content: space-between;
+      .ant-col {
         display: flex;
         justify-content: space-between;
-        p{
-         line-height: 2
+        p {
+          line-height: 2;
         }
       }
     }
@@ -1002,8 +1002,14 @@
   }
 }
 
-.lblShip{
+.lblShip {
   color: #222222;
   font-size: 14px;
   margin-top: -10px;
+}
+
+.radio-delivery {
+  margin-right: 10px;
+  width: 18px;
+  height: 18px;
 }
