add auto complete

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -187,6 +187,7 @@ label {
 @import "table";
 @import "select";
 @import "editor";
+@import "autocomplete";
 @import "product";
 @import "modal-confirm";
 @import "sale-order";
