commit fix UI support a Bách

--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -290,7 +290,8 @@
   margin-bottom: 20px;
 }
 .payment-row {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
+  color: #222222;
   display: flex;
   justify-content: space-between;
   margin-right: 30px;
