--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -507,7 +507,14 @@
 }
 
 .font-size-text {
-  font-size: 16px;
+  font-size: 14px;
+  color: #222222;
+}
+
+.font-size-price {
+  font-size: 18px;
+  font-weight: 700;
+  color: #2A2A86;
 }
 
 .row-info-icon {
@@ -563,8 +570,9 @@
 }
 .text-center {
   div {
+    color: #222222;
     & > span {
-      color: #1389ff;
+      color: #000000;
       display: block;
     }
   }
@@ -624,7 +632,7 @@
 }
 
 .yody-pos-varian-name {
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .padding-lef-right {
